Fix button vertical spacing.

--- a/less/fr-gratitude-widget.less
+++ b/less/fr-gratitude-widget.less
@@ -67,7 +67,7 @@
     font-size: 18px;
     font-weight: bold;
     padding: 15px 18px;
-    line-height: 21px;
+    line-height: 1;
     .white-heart {
         width: 18px;
         margin-right: 12px;
@@ -75,7 +75,7 @@
     > span {
         letter-spacing: 0.5px;
         font-size: 18px;
-        line-height: 21px;
+        line-height: 1;
         height: auto;
         width: auto;
     }
